--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,8 @@ spring:
     defer-datasource-initialization: true
     hibernate:
       ddl-auto: update
+    #database-platform: org.hibernate.dialect.MySQLDialect
   datasource:
     url: jdbc:mysql://localhost:3306/springsecurity
-    username: root
-    password: root
+    username: system
+    password: system
