--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   jpa:
     defer-datasource-initialization: true
     hibernate:
-      ddl-auto: update
-    #database-platform: org.hibernate.dialect.MySQLDialect
+      ddl-auto: create
+    show-sql: true
   datasource:
     url: jdbc:mysql://localhost:3306/springsecurity
     username: system
