--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,6 @@ spring:
     show-sql: false
   datasource:
     url: jdbc:mysql://localhost:3306/springsecurity
-    username: system
-    password: system
+    username: root
+    password: root
     #initialization-mode: always
